--- a/src/main/resources/templates/rifornimento/catalogoAuto.html
+++ b/src/main/resources/templates/rifornimento/catalogoAuto.html
@@ -12,6 +12,7 @@
         <th class="col-1 text-center">Id</th>
         <th class="col-2 text-center">Name</th>
         <th class="col-1 text-center">Auto Type</th>
+        <th class="col-2 text-center">Marca</th>
         <th class="col-2 text-center">Price</th>
         <th class="col-2 text-center"></th>
         <th class="col-2 text-center"></th>
@@ -22,6 +23,7 @@
         <th th:text="${auto.id}" class=" text-center"></th>
         <td th:text="${auto.name}" class=" text-center"></td>
         <td th:text="${auto.autoType.name}" class=" text-center"></td>
+        <td th:text="${auto.marca}" class=" text-center"></td>
         <td th:text="${auto.getFormattedPrice() + ' €'}" class=" text-center"></td>
         <td><a th:href=@{/auto/admin/edit/{id}(id=${auto.id})} class="btn btn-primary btn-sm">Modifica</a></td>
         <td><form th:action="@{/auto/admin/delete/{id}(id=${auto.id})}"
