Aggiunte foto sql

--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -76,7 +76,7 @@
                           id="auto-search"
                           role="search">
                         <input class="form-control" type="search" th:value="${preloadSearch}" name="Keyword" id="Keyword" placeholder="Cerca...">
-                        <button class="btn btn-outline-secondary" type="submit">Cerca</button>
+                        <button class="btn btn-outline-warning fa"  style="font-size:18px" type="submit">&#xf1b9;</button>
                     </form>
                 </div>
 
@@ -86,8 +86,8 @@
                     <img src="/AutoJaita.png" style="width: 25rem; height: 17rem;">
                 </a>
             </div>
-            <div class="col-4 text-end fs-6 pt-5 pb-4">
-                <i class="fa fa-instagram "></i>
+            <div class="col-4 text-end pt-5 pb-4">
+                <i class="fa fa-instagram"></i>
                 <i class="fa fa-facebook"></i>
                 <i class="fa fa-twitter"></i>
             </div>
@@ -98,7 +98,6 @@
     <div class="container-fluid bg-color-hf pt-4 pb-3 border-top">
         <div class="row">
             <div class="col-12 text-center">
-                <h6 class="color-hf">gruppo</h6>
                 <h4 class="color-hf"><strong>AUTOJAITA</strong><span class="fs-6"> S.R.L.</span></h4>
                 <p style="font-size: 10px">partita iva: 0050000400009</p>
             </div>
