--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -4,7 +4,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Prompt:wght@200&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <body>
 <header th:replace="fragments/resources :: header"></header>
 <main class="span.animated">
@@ -217,7 +217,7 @@
                 <h1 class="text-center pb-4"
                     style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- Contattaci
                     -</strong></h1>
-                <div class="col-4 border-end border-dark">
+                <div class="col-4 border border-end border-dark">
                     <br>
                     <br>
                     <h3 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"
@@ -238,7 +238,7 @@
                     <br>
                     <br>
                 </div>
-                <div class="col-4 border-start border-end border-dark">
+                <div class="col-4 border border-start border-end border-dark">
                     <br>
                     <br>
                     <h3 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"
@@ -252,11 +252,11 @@
                     <h5>Instagram support:</h5>
                     <p>Seguici e contattaci su instagram in direct per avere il nostro supporto 7 giorni su 7.</p>
                 </div>
-                <div class="col-4 border-start border-dark">
+                <div class="col-4 border border-start border-dark">
                     <br>
                     <br>
                     <h3 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"
-                        class="text-danger"><strong>I Nostri Social:</strong></h3>
+                        class="text-danger"><strong>Social:</strong></h3>
                     <br>
                     <h5>Il nostro Instagram:</h5>
                     <p class="fa">&#xf16d;</p><span>Auto-Jaita</span>
