--- a/src/main/resources/templates/automobili/show.html
+++ b/src/main/resources/templates/automobili/show.html
@@ -17,7 +17,7 @@
         <p  th:text="${auto.description}"></p>
         <h5>Price: <span class="fw-bold text-success" th:text="${auto.getFormattedPrice()} + €"></span></h5>
             <a th:href="@{/acquistoCliente/create/{id}(id=${auto.id})}" class="btn btn-outline-warning btn-sm">Acquista</a>
-            <button class="ms-2"><a th:href=@{/auto} class="btn btn-outline-dark btn-sm">Indietro</a></button>
+            <a class="ms-2"><a th:href=@{/auto} class="btn btn-outline-dark btn-sm">Indietro</a></a>
     </div>
         <div class="col-4 text-center">
     </div>
