--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -83,7 +83,7 @@
             </div>
             <div class="col-4 ps-5">
                 <a class="navbar-brand" th:href="@{/}">
-                    <img src="/AutoJaita.png" style="width: 25rem; height: 17rem;">
+                    <img src="/ciao.png" style="width: 25rem; height: 17rem;">
                 </a>
             </div>
             <div class="col-4 text-end pt-5 pb-4">
@@ -98,17 +98,17 @@
     <div class="container-fluid bg-color-hf pt-4 pb-3 border-top">
         <div class="row">
             <div class="col-12 text-center">
-                <h4 class="color-hf"><strong>AUTOJAITA</strong><span class="fs-6"> S.R.L.</span></h4>
+                <h4 class=""><strong>- AUTOJAITA</strong><span class="fs-6"> S.R.L. -</span></h4>
                 <p style="font-size: 10px">partita iva: 0050000400009</p>
             </div>
             <div class="col-6 text-end" style="font-size: 12px">
-                <h5 class="color-hf">Vendita</h5>
+                <h5 class="">Vendita</h5>
                 <p>Lunedì - Venerdì: 9:00 - 13.30 / 14.30 - 19:30</p>
                 <p>Sabato: 9:00 - 13.30 / 14:30 - 18:00</p>
                 <p>Domenica: 10.00 - 13.00</p>
             </div>
             <div class="col-6" style="font-size: 12px">
-                <h5 class="color-hf">Assistenza</h5>
+                <h5 class="">Assistenza</h5>
                 <p>Lunedì - venerdì: 8:30 - 13:30 / 14:30 - 18:30</p>
                 <p>Sabato: 8:30 - 13:30</p>
                 <p>Domenica: Chiuso</p>
