--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -48,8 +48,8 @@
                     style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>-
                     Concessionarie Ufficiali -</strong></h1>
             </div>
-            <div class="row mt-5 mb-5 text-center">
-                <div class="col-3 mb-5 pb-5" th:each="auto : ${logoList}">
+            <div class="row mt-5 pb-3 text-center">
+                <div class="col-3 mb-5 pb-5 pt-2" th:each="auto : ${logoList}">
                     <a th:href="@{/auto/concessionaria/{marca}(marca=${auto.marca})}">
                         <img th:src="${auto.logo}" style="height: 100px">
                     </a>
@@ -57,11 +57,11 @@
             </div>
 
 
-            <h1 class="text-center mt-5 mb-5"
+            <h1 class="text-center mt-3 mb-5"
                 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- AutoJaita
                 la
                 Concessionaria del futuro -</strong></h1>
-            <div class=" mt-5  bg-image bg-landing">
+            <div class=" mt-3  bg-image bg-landing">
                 <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Chi Siamo?
                 </button>
