Aggiustata landing page

--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -83,10 +83,10 @@
             </div>
             <div class="col-4 ps-5">
                 <a class="navbar-brand" th:href="@{/}">
-                    <img src="/ciao.png" style="width: 25rem; height: 17rem;">
+                    <img src="/ciao.png" style="width: 15rem; height: 13rem;">
                 </a>
             </div>
-            <div class="col-4 text-end pt-5 pb-4">
+            <div class="col-4 text-center ps-5 pt-5 pb-4">
                 <i class="fa fa-instagram"></i>
                 <i class="fa fa-facebook"></i>
                 <i class="fa fa-twitter"></i>
