--- a/src/main/resources/templates/catalogo/edit.html
+++ b/src/main/resources/templates/catalogo/edit.html
@@ -30,7 +30,7 @@
 
             <div class="row justify-content-end">
                 <div class="col-4 mt-5 mb-5 text-center">
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-primary">Salva</button>
                 </div>
             </div>
         </form>
