--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -69,3 +69,7 @@ margin-top: 4rem;
 .padding-tb{;
 padding-bottom: 50px;
 }
+
+.font-fre{
+font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;
+}
