--- a/src/main/resources/templates/acquisto/formAcquisto.html
+++ b/src/main/resources/templates/acquisto/formAcquisto.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/resources :: head('Form Acquisto')"></head>
-<body>
+<body class="bg-light">
 <header th:replace="fragments/resources :: header"></header>
 <main>
-    <div class="container w-50 card mt-5 mb-5 pb-3">
+    <div class="container w-50 mt-5 mb-5 pb-3">
+        <div class="card pb-2 bg-light">
         <div class="row">
             <div class="col-12 text-center">
             <div class="col-12 text-center" style="padding: 0%">
                 <a th:href="@{/auto}">
-                    <img class="img-fluid shadow-lg" th:src="@{${auto.foto}}" style="transition: transform 0.3s; width: 100%; height: 350px;"
+                    <img class="img-fluid shadow-lg" th:src="@{${auto.foto}}" style="transition: transform 0.3s; width: 100%; height: 400px;"
                          onmouseover="this.style.transform='scale(1.030)'" onmouseout="this.style.transform='scale(1)'"
                          alt="foto">
                 </a>
@@ -30,6 +31,8 @@
                 </form>
 
             </div>
+        </div>
+        </div>
         </div>
     </div>
 </main>
