--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -56,84 +56,123 @@
                 </div>
             </div>
 
-
             <h1 class="text-center mt-3 mb-5"
                 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- AutoJaita
                 la
                 Concessionaria del futuro -</strong></h1>
-            <div class=" mt-3  bg-image bg-landing">
-                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Chi Siamo?
-                </button>
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                     aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Chi Siamo?</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                Da decenni, AutoJaita è sinonimo di eccellenza nel mondo automobilistico.
-                                Siamo più di un concessionario, siamo una comunità appassionata di esperti
-                                automobilistici dedicati
-                                a fornire un servizio straordinario e veicoli di alta qualità.
-                                La nostra missione è superare le aspettative dei nostri clienti, mettendo a disposizione
-                                un'ampia
-                                gamma di auto
-                                che rispecchiano l'eccellenza del design, dell'innovazione e delle prestazioni. La
-                                nostra squadra di
-                                professionisti
-                                è qui per guidarti in ogni passo del processo di selezione dell'auto perfetta per le tue
-                                esigenze.
-                                Siamo orgogliosi di offrire un'esperienza di acquisto unica, basata su trasparenza,
-                                affidabilità e
-                                dedizione. Con AutoJaita,
-                                non stai solo acquistando un'auto; stai diventando parte di una storia di successo che
-                                si tramanda
-                                da generazioni.
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/esterno-07-1440x495.webp" style="width: 100%; height: 500px" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption d-none d-md-block">
+                                <button type="button" class="btn btn-dark mb-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                    Chi Siamo?
+                                </button>
+                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5 text-dark" id="exampleModalLabel">Chi Siamo?</h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body text-dark">
+                                                Da decenni, AutoJaita è sinonimo di eccellenza nel mondo automobilistico.
+                                                Siamo più di un concessionario, siamo una comunità appassionata di esperti
+                                                automobilistici dedicati
+                                                a fornire un servizio straordinario e veicoli di alta qualità.
+                                                La nostra missione è superare le aspettative dei nostri clienti, mettendo a disposizione
+                                                un'ampia
+                                                gamma di auto
+                                                che rispecchiano l'eccellenza del design, dell'innovazione e delle prestazioni. La
+                                                nostra squadra di
+                                                professionisti
+                                                è qui per guidarti in ogni passo del processo di selezione dell'auto perfetta per le tue
+                                                esigenze.
+                                                Siamo orgogliosi di offrire un'esperienza di acquisto unica, basata su trasparenza,
+                                                affidabilità e
+                                                dedizione. Con AutoJaita,
+                                                non stai solo acquistando un'auto; stai diventando parte di una storia di successo che
+                                                si tramanda
+                                                da generazioni.
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button type="button" class="btn btn-dark mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                                    Sede Napoli
+                                </button>
+                                <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="card w-100 p-3">
+                                            <div class="card-body">
+                                                <h3 class="card-title">Sede Napoli</h3>
+                                            </div>
+                                            <div class="ratio ratio-16x9">
+                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3018.1959476867128!2d14.2601021755054!3d40.84562152942548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133b083886b58283%3A0x8a4b9fa16cec60dd!2sVia%20Marina%2C%20Napoli%20NA!5e0!3m2!1sit!2sit!4v1706800858450!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal1">
-                    Perchè Scegliere AutoJaita?
-                </button>
-                <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1"
-                     aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel1">Perchè Scegliere AutoJaita?</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                Scegliere AutoJaita significa immergersi in un universo automobilistico di
-                                classe e convenienza.
-                                Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di
-                                guida senza
-                                eguali.
-                                Collaboriamo con partner di fama, assicurando che ogni auto nel nostro showroom soddisfi
-                                gli
-                                standard più elevati.
-                                Entra nel mondo di AutoJaita, dove l'eleganza, le prestazioni e l'affidabilità si
-                                fondono in
-                                un'offerta unica,
-                                plasmata per soddisfare le tue esigenze automobilistiche.
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <div class="carousel-item">
+                        <img src="/Car_Finance_Large_banner.webp" style="width: 80%; height: 500px" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+                            Perchè Scegliere AutoJaita?
+                            </button>
+                            <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5 text-dark" id="exampleModalLabel1">Perchè Scegliere AutoJaita?</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body text-dark">
+                                        Scegliere AutoJaita significa immergersi in un universo automobilistico di
+                                        classe e convenienza.
+                                        Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di
+                                        guida senza
+                                        eguali.
+                                        Collaboriamo con partner di fama, assicurando che ogni auto nel nostro showroom soddisfi
+                                        gli
+                                        standard più elevati.
+                                        Entra nel mondo di AutoJaita, dove l'eleganza, le prestazioni e l'affidabilità si
+                                        fondono in
+                                        un'offerta unica,
+                                        plasmata per soddisfare le tue esigenze automobilistiche.
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
+
+
+
         </div>
         <div class="container-fluid pb-5 pt-5 bg-light">
             <div class="row">
@@ -249,7 +288,7 @@
                     <h5>Live Support:</h5>
                     <p>Accedi per avere il supporto live dal nostro team. <br> Il servizio è disponibile dal Lunedì al
                         Sabato dalle 10:00 alle 18:00.</p>
-                    <h5>Instagram support:</h5>
+                    <h5>Instagram Support:</h5>
                     <p>Seguici e contattaci su instagram in direct per avere il nostro supporto 7 giorni su 7.</p>
                 </div>
                 <div class="col-4 border border-start border-dark">
