--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -69,3 +69,9 @@ padding-bottom: 50px;
 .font-fre{
 font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;
 }
+
+body {
+            margin: 0;
+            padding: 0;
+            background-image: url('/autoo.jpg');
+}
