--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <header th:fragment="header" style="height: auto;">
-    <div class="container-fluid bg-color-hf">
+    <div class="container-fluid bg-dark">
         <div class="row navbar navbar-expand-lg text-center">
             <div class="col-4 text-start pt-4 pb-4">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -29,13 +29,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link color-hf" th:classappend="${area == 'auto' ? 'active' : ''}"
+                            <a class="nav-link text-light" th:classappend="${area == 'auto' ? 'active' : ''}"
                                th:href="@{/auto}">Auto</a>
                         </li>
                         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle color-hf" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Categorie
                                     </a>
                                     <ul class="dropdown-menu " >
@@ -49,7 +49,7 @@
                         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown2">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle color-hf" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Amministrazione
                                     </a>
                                     <ul class="dropdown-menu " >
@@ -83,7 +83,7 @@
             </div>
             <div class="col-4 ps-5">
                 <a class="navbar-brand" th:href="@{/}">
-                    <img src="/ciao.png" style="width: 15rem; height: 13rem;">
+                    <img src="/d.png" >
                 </a>
             </div>
             <div class="col-4 text-center ps-5 pt-5 pb-4">
@@ -95,7 +95,7 @@
     </div>
 </header>
 <footer th:fragment="footer">
-    <div class="container-fluid bg-color-hf pt-4 pb-3 border-top">
+    <div class="container-fluid bg-dark pt-4 pb-3 border-top">
         <div class="row">
             <div class="col-12 text-center">
                 <h4 class=""><strong>- AUTOJAITA</strong><span class="fs-6"> S.R.L. -</span></h4>
