--- a/src/main/resources/templates/acquisto/formAcquisto.html
+++ b/src/main/resources/templates/acquisto/formAcquisto.html
@@ -5,7 +5,7 @@
 <header th:replace="fragments/resources :: header"></header>
 <main>
     <div class="container w-50 mt-5 mb-5 pb-3">
-        <div class="card border-light pb-4 bg-dark">
+        <div class="card pb-4 bg-dark">
         <div class="row">
             <div class="col-12 text-center">
             <div class="col-12 text-center" style="padding: 0%">
@@ -27,7 +27,7 @@
                     <input type="hidden" th:field="*{data}">
                     <input type="hidden" th:field="*{auto}">
                     <button type="submit" class="btn btn-outline-warning btn-sm">Conferma Acquisto</button>
-                    <span class="ms-2"><a th:href=@{/auto} class="btn btn-outline-dark btn-sm">Indietro</a></span></h5>
+                    <span class="ms-2"><a th:href=@{/auto} class="btn btn-outline-light btn-sm">Indietro</a></span></h5>
                 </form>
 
             </div>
