--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org">
 <head th:fragment="head(title)">
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -35,12 +35,15 @@
                         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle text-light" href="#" role="button"
+                                       data-bs-toggle="dropdown" aria-expanded="false">
                                         Categorie
                                     </a>
-                                    <ul class="dropdown-menu color-auto" >
+                                    <ul class="dropdown-menu color-auto">
                                         <li class="color-auto" th:each="autoType:${autoTypeList}">
-                                            <a class="dropdown-item color-auto color-amministrazione" th:href="@{/auto/{id}(id=${autoType.id})}" th:text="${autoType.name}"></a>
+                                            <a class="dropdown-item color-auto color-amministrazione"
+                                               th:href="@{/auto/{id}(id=${autoType.id})}"
+                                               th:text="${autoType.name}"></a>
                                         </li>
                                     </ul>
                                 </li>
@@ -49,21 +52,28 @@
                         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown2">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle text-light" href="#" role="button"
+                                       data-bs-toggle="dropdown" aria-expanded="false"
+                                       sec:authorize="hasAuthority('ADMIN')">
                                         Amministrazione
                                     </a>
-                                    <ul class="dropdown-menu color-auto" >
+                                    <ul class="dropdown-menu color-auto">
                                         <li>
-                                            <a class="dropdown-item color-amministrazione" th:href="@{/admin/acquistoRifornitore}">Rifornimento</a>
+                                            <a class="dropdown-item color-amministrazione"
+                                               th:href="@{/admin/acquistoRifornitore}">Rifornimento</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item color-amministrazione" th:href="@{/admin/acquistoRifornitore/catalogoVendite}">Vendite</a>
+                                            <a class="dropdown-item color-amministrazione"
+                                               th:href="@{/admin/acquistoRifornitore/catalogoVendite}">Vendite</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item color-amministrazione" th:href="@{/admin/acquistoRifornitore/catalogoAuto}">Catalogo Auto</a>
+                                            <a class="dropdown-item color-amministrazione"
+                                               th:href="@{/admin/acquistoRifornitore/catalogoAuto}">Catalogo Auto</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item color-amministrazione" th:href="@{/admin/acquistoRifornitore/catalogoCategorie}">Catalogo Categorie</a>
+                                            <a class="dropdown-item color-amministrazione"
+                                               th:href="@{/admin/acquistoRifornitore/catalogoCategorie}">Catalogo
+                                                Categorie</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -75,15 +85,18 @@
                           method="get"
                           id="auto-search"
                           role="search">
-                        <input class="form-control" type="search" th:value="${preloadSearch}" name="Keyword" id="Keyword" placeholder="Cerca...">
-                        <button class="btn btn-outline-warning border-info text-info fa"  style="font-size:18px" type="submit">&#xf1b9;</button>
+                        <input class="form-control" type="search" th:value="${preloadSearch}" name="Keyword"
+                               id="Keyword" placeholder="Cerca...">
+                        <button class="btn btn-outline-warning border-info text-info fa" style="font-size:18px"
+                                type="submit">&#xf1b9;
+                        </button>
                     </form>
                 </div>
 
             </div>
             <div class="col-4 ps-5">
                 <a class="navbar-brand" th:href="@{/}">
-                    <img src="/d.png" style="height: 150px; width: 150px;"  >
+                    <img src="/d.png" style="height: 150px; width: 150px;">
                 </a>
             </div>
             <div class="col-4 text-center ps-5 pt-5 pb-4">
@@ -124,7 +137,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
-    <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/fab56dab574742f3924d185c238ef95f38ab664e3eee461aaa6f6809659d5b93.js"></script>
+    <script async type="text/javascript"
+            src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/fab56dab574742f3924d185c238ef95f38ab664e3eee461aaa6f6809659d5b93.js"></script>
 
 </th:block>
 </body>
