aggiunto alt alle immagini

--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -70,7 +70,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="/esterno-07-1440x495.webp" style="width: 100%; height: 500px" class="d-block w-100"
-                             alt="...">
+                             alt="azienda">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="carousel-caption d-none d-md-block">
                                 <button type="button" class="btn btn-dark mb-5" data-bs-toggle="modal"
@@ -148,7 +148,7 @@
 
                     <div class="carousel-item">
                         <img src="/Car_Finance_Large_banner.webp" style="width: 80%; height: 500px"
-                             class="d-block w-100" alt="...">
+                             class="d-block w-100" alt="foto">
                         <div class="carousel-caption d-none d-md-block">
                             <button type="button" class="btn btn-dark" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal1">
