cambio campo contattaci nella landing page

--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -295,7 +295,7 @@
                 <h1 class="text-center pb-4"
                     style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- Contattaci
                     -</strong></h1>
-                <div class="col-4 border border-end border-dark">
+                <div class="col-4 border-end border-dark">
                     <br>
                     <br>
                     <h3 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"
@@ -316,7 +316,7 @@
                     <br>
                     <br>
                 </div>
-                <div class="col-4 border border-start border-end border-dark">
+                <div class="col-4 border-start border-end border-dark">
                     <br>
                     <br>
                     <h3 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"
@@ -330,18 +330,18 @@
                     <h5>Instagram Support:</h5>
                     <p>Seguici e contattaci su instagram in direct per avere il nostro supporto 7 giorni su 7.</p>
                 </div>
-                <div class="col-4 border border-start border-dark">
+                <div class="col-4 border-start border-dark">
                     <br>
                     <br>
                     <h3 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"
                         class="text-warning"><strong>Social:</strong></h3>
                     <br>
                     <h5>Il nostro Instagram:</h5>
-                    <p class="fa">&#xf16d;</p><span>Auto-Jaita</span>
+                    <p class="fa text-warning">&#xf16d;</p><span>Auto-Jaita</span>
                     <h5>Il nostro Facebook:</h5>
-                    <p class="fa">&#xf09a;</p><span>Concessionaria AutoJaita</span>
+                    <p class="fa text-warning">&#xf09a;</p><span>Concessionaria AutoJaita</span>
                     <h5>Il nostro Twitter:</h5>
-                    <p class="fa">&#xf099;</p><span>Auto-Jaita</span>
+                    <p class="fa text-warning">&#xf099;</p><span>Auto-Jaita</span>
                 </div>
             </div>
         </div>
