cambio background list

--- a/src/main/resources/templates/automobili/list.html
+++ b/src/main/resources/templates/automobili/list.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/resources :: head('Parco Auto')"></head>
 <body>
 <header th:replace="fragments/resources :: header"></header>
-<div class="container-fluid bg-light mt-5 border-bottom pb-4 bg-image bg-list">
+<div class="container-fluid mt-5 border-bottom pb-4 bg-image bg-list">
     <div class="row ms-5 g-5 flex-wrap justify-content-between">
         <div class="alert alert-info col-12" th:if="${listaAuto.size() == 0}">Non ci sono auto per questa categoria</div>
         <div th:if="${redirectMessage != null}" class="alert alert-success alert-dismissible fade show mt-4" role="alert">
