--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -93,3 +93,8 @@ background-color: #68137B;
 .color-amministrazione{
 color: #4E8FD7;
 }
+
+.gg {
+     background: #000000;
+     opacity: 0.97;
+ }
