--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -100,9 +100,9 @@
                 </a>
             </div>
             <div class="col-4 text-center ps-5 pt-5 pb-4">
-                <i class="fa fa-instagram"></i>
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-twitter"></i>
+                <i class="rounded text-light color1 fa fa-instagram"></i>
+                <i class="rounded fa fa-facebook"></i>
+                <i class="rounded fa fa-twitter"></i>
             </div>
         </div>
     </div>
@@ -126,7 +126,7 @@
                 <p>Sabato: 8:30 - 13:30</p>
                 <p>Domenica: Chiuso</p>
             </div>
-            <div class="text-light col-12 row text-center">
+            <div class="text-light text-center col-12 row">
                 <p>©Copyright 2024</p>
             </div>
         </div>
