--- a/src/main/resources/templates/automobili/list.html
+++ b/src/main/resources/templates/automobili/list.html
@@ -26,7 +26,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
         </div>
         <div class="col-md-4 d-flex justify-content-center animated bounceInDown" th:each="auto : ${listaAuto}">
-            <div class="card border border-dark bg-dark" style="width: 17rem; padding: 0px;">
+            <div class="card border border-dark bg-secondary bg-opacity-10" style="width: 17rem; padding: 0px;">
                 <a th:href="@{/auto/show/{id}(id=${auto.id})}">
                     <img th:src="${auto.foto}" class="card-img border border-dark"
                          style="height: 150px; transition: transform 0.3s;"
@@ -41,7 +41,7 @@
                     <div class="d-grid gap-2">
                         <a th:href=@{/acquistoCliente/create/{id}(id=${auto.id})} class="btn btn-success btn-sm">Acquista</a>
                         <a th:href="@{/auto/show/{id}(id=${auto.id})}"
-                           class="btn btn-warning text-dark btn-sm">Dettagli</a>
+                           class="btn btn-light  text-dark btn-sm">Dettagli</a>
                     </div>
                 </div>
             </div>
